# pangeo-pyinterp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile.manylinux2014  README.md  build-wheels.bat  build-wheels.sh  initialize-repo.bat  pyproject.toml  vcpkg.json  version.json
python/: CMakeLists.txt
python/arl_pyinterp/: __init__.py  version.py
python/core/: CMakeLists.txt
